kustomize/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: styx-frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: styx-frontend
  template:
    metadata:
      labels:
        app: styx-frontend
    spec:
      imagePullSecrets:
        - name: frontend-credentials
      containers:
        - name: styx-frontend
          image: docker.io/robnickmans/peno3
          imagePullPolicy: IfNotPresent
          args:
            - start-server
            - frontend
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
          - name: zoneinfo
            mountPath: /etc/localtime
            subPath: Europe/Amsterdam
            readOnly: true
      volumes:
      - name: zoneinfo
        hostPath:
        path: /usr/share/zoneinfo
