kustomize/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-api
spec:
  type: NodePort
  selector:
    app: styx-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 30090
      targetPort: 3000
