kustomize/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  tls:
  - hosts:
    - styx.rndevelopment.be
    secretName: wildcard-cert
  rules:
  - host: styx.rndevelopment.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-api
            port:
              number: 80
